docs/apache-airflow-providers-google/11.0.0/_sources/_api/airflow/providers/google/cloud/links/translate/index.rst.txt
:py:mod:`airflow.providers.google.cloud.links.translate`
========================================================

.. py:module:: airflow.providers.google.cloud.links.translate

.. autoapi-nested-parse::

   This module contains Google Translate links.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.translate.TranslationLegacyDatasetLink
   airflow.providers.google.cloud.links.translate.TranslationDatasetListLink
   airflow.providers.google.cloud.links.translate.TranslationLegacyModelLink
   airflow.providers.google.cloud.links.translate.TranslationLegacyModelTrainLink
   airflow.providers.google.cloud.links.translate.TranslationLegacyModelPredictLink
   airflow.providers.google.cloud.links.translate.TranslateTextBatchLink
   airflow.providers.google.cloud.links.translate.TranslationNativeDatasetLink
   airflow.providers.google.cloud.links.translate.TranslationDatasetsListLink




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.translate.TRANSLATION_BASE_LINK
   airflow.providers.google.cloud.links.translate.TRANSLATION_LEGACY_DATASET_LINK
   airflow.providers.google.cloud.links.translate.TRANSLATION_DATASET_LIST_LINK
   airflow.providers.google.cloud.links.translate.TRANSLATION_LEGACY_MODEL_LINK
   airflow.providers.google.cloud.links.translate.TRANSLATION_LEGACY_MODEL_TRAIN_LINK
   airflow.providers.google.cloud.links.translate.TRANSLATION_LEGACY_MODEL_PREDICT_LINK
   airflow.providers.google.cloud.links.translate.TRANSLATION_TRANSLATE_TEXT_BATCH
   airflow.providers.google.cloud.links.translate.TRANSLATION_NATIVE_DATASET_LINK
   airflow.providers.google.cloud.links.translate.TRANSLATION_NATIVE_LIST_LINK


.. py:data:: TRANSLATION_BASE_LINK

   

.. py:data:: TRANSLATION_LEGACY_DATASET_LINK

   

.. py:data:: TRANSLATION_DATASET_LIST_LINK

   

.. py:data:: TRANSLATION_LEGACY_MODEL_LINK

   

.. py:data:: TRANSLATION_LEGACY_MODEL_TRAIN_LINK

   

.. py:data:: TRANSLATION_LEGACY_MODEL_PREDICT_LINK

   

.. py:data:: TRANSLATION_TRANSLATE_TEXT_BATCH

   

.. py:data:: TRANSLATION_NATIVE_DATASET_LINK

   

.. py:data:: TRANSLATION_NATIVE_LIST_LINK

   

.. py:class:: TranslationLegacyDatasetLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Legacy Translation Dataset link.

   Legacy Datasets are created and managed by AutoML API.

   .. py:attribute:: name
      :value: 'Translation Legacy Dataset'

      

   .. py:attribute:: key
      :value: 'translation_legacy_dataset'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, task_instance, dataset_id, project_id)
      :staticmethod:



.. py:class:: TranslationDatasetListLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Translation Dataset List link.

   .. py:attribute:: name
      :value: 'Translation Dataset List'

      

   .. py:attribute:: key
      :value: 'translation_dataset_list'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, task_instance, project_id)
      :staticmethod:



.. py:class:: TranslationLegacyModelLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Translation Legacy Model link.

   Legacy Models are created and managed by AutoML API.

   .. py:attribute:: name
      :value: 'Translation Legacy Model'

      

   .. py:attribute:: key
      :value: 'translation_legacy_model'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, task_instance, dataset_id, model_id, project_id)
      :staticmethod:



.. py:class:: TranslationLegacyModelTrainLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Translation Legacy Model Train link.

   Legacy Models are created and managed by AutoML API.

   .. py:attribute:: name
      :value: 'Translation Legacy Model Train'

      

   .. py:attribute:: key
      :value: 'translation_legacy_model_train'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, task_instance, project_id)
      :staticmethod:



.. py:class:: TranslationLegacyModelPredictLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Translation Legacy Model Predict link.

   Legacy Models are created and managed by AutoML API.

   .. py:attribute:: name
      :value: 'Translation Legacy Model Predict'

      

   .. py:attribute:: key
      :value: 'translation_legacy_model_predict'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, task_instance, model_id, project_id, dataset_id)
      :staticmethod:



.. py:class:: TranslateTextBatchLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Translation results for the text batch translate.

   Provides link to output results.


   .. py:attribute:: name
      :value: 'Text Translate Batch'

      

   .. py:attribute:: key
      :value: 'translate_text_batch'

      

   .. py:attribute:: format_str

      

   .. py:method:: extract_output_uri_prefix(output_config)
      :staticmethod:


   .. py:method:: persist(context, task_instance, project_id, output_config)
      :staticmethod:



.. py:class:: TranslationNativeDatasetLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Legacy Translation Dataset link.

   Legacy Datasets are created and managed by AutoML API.

   .. py:attribute:: name
      :value: 'Translation Native Dataset'

      

   .. py:attribute:: key
      :value: 'translation_naive_dataset'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, task_instance, dataset_id, project_id)
      :staticmethod:



.. py:class:: TranslationDatasetsListLink


   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Translation Datasets List link.

   Both legacy and native datasets are available under this link.

   .. py:attribute:: name
      :value: 'Translation Dataset List'

      

   .. py:attribute:: key
      :value: 'translation_dataset_list'

      

   .. py:attribute:: format_str

      

   .. py:method:: persist(context, task_instance, project_id)
      :staticmethod:



